fixed incorrect list.of call