@@ -447,7 +447,7 @@ public class MongoEntity extends PhysicalEntity implements TranslatableEntity, M
             try {
                 final long changes = doDML( operation, filter, operations, onlyOne, needsDocument, xid, bucket );
 
-                return Linq4j.asEnumerable( List.of( new PolyValue[]{ PolyLong.of( changes ) } ) );
+                return Linq4j.asEnumerable( Collections.singletonList( new PolyValue[]{ PolyLong.of( changes ) } ) );
             } catch ( MongoException e ) {
                 entity.getTransactionProvider().rollback( xid );
 
